# rust-server-practice

./: .env.example  .gitignore  Cargo.toml
.cargo/: config.toml
src/: handler.rs  main copy.rs  main.rs  schema.rs
src/api/: api.rs  todo.rs
src/models/: mod.rs  model.rs  todo.rs
src/repository/: database.rs
src/services/: emily_service.rs  mod.rs
